--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@tiptap/extension-highlight": "^2.1.12",
     "@tiptap/extension-image": "^2.1.12",
     "@tiptap/extension-link": "^2.1.12",
+    "@tiptap/extension-placeholder": "^2.22.3",
     "@tiptap/extension-subscript": "^2.1.12",
     "@tiptap/extension-superscript": "^2.1.12",
     "@tiptap/extension-text-align": "^2.1.12",
