--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "@tiptap/vue-3": "^2.1.12",
     "axios": "^1.6.2",
     "vue": "^3.3.11",
-    "vue-tailwind-datepicker": "^1.7.3"
+    "vue-tailwind-datepicker": "^1.7.3",
+    "turndown": "^7.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
